--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
 body {
   font-family: "Spartan", sans-serif;
-  background-color: #f5f5f5;
+  background-color: #262626;
   min-height: 100vh;
   width: 100vw;
   overflow-x: hidden;
