refactor: remove react-slick dependency and update slide animation in reviews component

--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,18 @@ body {
     transform: rotate(360deg);
   }
 }
+
+
+.animate-slide {
+  display: flex;
+  animation: slide 60s linear infinite;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
